JM_lab2_v1_k8s/l2-mssql-depoyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l2-mssql-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: l2-mssql
  template:
    metadata:
      labels:
        app: l2-mssql
    spec:
      containers:
      - name: l2-mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: l2mssqldb
          mountPath: /var/opt/mssql/data
      volumes:
      - name: l2mssqldb
        persistentVolumeClaim:
          claimName: l2-mssql-pvc
