JM_lab2_v1_k8s/l2-service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: l2-service-api
spec:
  type: NodePort
  selector:
    app: l2-mc-api
  ports:
    - port: 8080
      targetPort: 80
