JM_lab2_v1_k8s/l2-service-apipost.yml
apiVersion: v1
kind: Service
metadata:
  name: l2-service-apipost
spec:
  type: NodePort
  selector:
    app: l2-mc-apipost
  ports:
    - port: 8080
      targetPort: 80
