JM_lab2_v1_k8s/l2-service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: l2-service-app
spec:
  type: NodePort
  selector:
    app: l2-mc-app
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
