JM_lab2_v1_k8s/l2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l2-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/Jokes        # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: l2-service-api # ім'я сервісу
                port:
                  number: 8080           # порт на якому запущено сервіс
          - path: /api/JokesPost
            pathType: Prefix
            backend:
              service:
                name: l2-service-apipost
                port:
                  number: 8080
          - path: /api/app
            pathType: Prefix
            backend:
              service:
                name: l2-service-app
                port:
                  number: 8080
